[tool.poetry]
name = "ocpp_mqtt_bridge"
version = "0.0.0"
description = ""
authors = ["Michael Allan <michael@intrinseca.me.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ocpp = "^1.0.0"
websockets = "^12.0"
transitions = "^0.9.1"
aiomqtt = "^2.3.0"
tzdata = "^2024.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
types-jsonschema = "^4.23.0.20240712"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
types-pytz = "^2024.1.0.20240417"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
log_cli=true
filterwarnings = "ignore:.*Action enum contains deprecated members.*:DeprecationWarning"

[tool.ruff]
extend-exclude = ["stubs"]

[tool.ruff.lint]

select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
